solc_mutator_ossfuzz_seed_corpus/test_sol/test_361b5e49a27b2df58ba76ccef455497ab1c0c11a1d14a2438d8b16311b1a4ace_aab90e9ff4e90e8d1b2a4e2a38a03ebd256784b1_sol.sol
==== Source:  ====

==== Source: su0.sol ====
contract C0 {
  function f0(bool i0,bytes29 i1,bytes25 i2,function () external i3) external returns(C0 o0,bytes28 o1,C0 o2)
  {

{
}
  }
  function f1(bytes memory i0,C0 i1) external returns(int184 o0,bytes memory o1,bytes29 o2)
  { }
  function f2(bytes23 i0) external returns(bytes12 o0)
  { }
}
function f3(int104 i0,int48 i1,address i2)  returns(bytes memory o0)
{
  i0 /= (4126677223046350074006226609932 / -3987436077399932964432140755791);



  {


  }
}

==== Source: su1.sol ====
pragma abicoder v2;
pragma solidity >= 0.0.0;
import "su0.sol";
// ----
// TypeError 7366: (su0.sol:379-453): Operator /= not compatible with types int104 and rational_const -1375559074348783358002075536644 / 1329145359133310988144046918597
